# S5-KCK

./: .gitignore  .style.yapf  README.md  Sygnaly-Tutorial-clear.ipynb  classes.py  config.py  debug.py  fft.ipynb  filters.py  localio.py  main.py  notebook.ipynb  requirements.txt  signals-part-1.ipynb  transform.py  utils.py
#01/: Zadanie.ipynb
#02/: .gitignore  Numpy_Sympy.ipynb
#03/: .gitignore  colors.ipynb
#04/: .gitignore  images.ipynb
#05/: .gitignore  requirements.txt  score.ipynb
#05/preprocess/: Cargo.toml
#05/preprocess/src/: draw.rs  filters.rs  main.rs
#05/res/: .gitignore
#05/score/: Cargo.toml
#05/score/src/: error.rs  lib.rs
#05/score/src/filters/: mod.rs
report/: report.tex
score/: __init__.py  filters.py  io.py
