[package]
name = "score"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "score"
crate-type = ["cdylib"]

[dependencies]
image = "0.23.14"
miette = "3.2.0"
thiserror = "1.0.30"
imageproc = "0.22.0"
rayon = "1.5.1"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]